@@ -802,3 +802,30 @@ input[type=checkbox].es_dlc_selection:checked + label {
 	border-radius: 8px;
 	box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.2);
 }
+#es-lightbox {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,.4);
+	text-align: center;
+	z-index: 9000;
+}
+#es-lightbox p {
+	text-align:right; 
+	color: #fff;
+	margin-right: 20px;
+	margin-top: 20px;
+	font-size: 12px;
+	font-weight: bold;
+	cursor: pointer;
+}
+#es-lightbox img {
+	box-shadow:0 0 25px #111;
+	-webkit-box-shadow:0 0 25px #111;
+	max-width: 90%;
+	max-height: 90%;
+	border: 3px solid white;
+	border-radius: 15px;
+}
